Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -73,7 +73,7 @@ Transfer auf die Baubranche durch Lean Construction
 
 Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
-\subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung (IPA)}
+\subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
 \label{sec:2.2.2}
 
 IPA als ist das organisatorische und vertragliche "Betriebssystem", um die Lean-Philosophie in Bauprojekten praktisch umzusetzen.\\
