--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -3,33 +3,31 @@
 \section{Das Phasenmodell}
 \label{sec:4.1}
 
-Mit Blick in die Literatur fällt auf, dass eine zusammenhängende Darstellung des \ac{TVD}-Gesamtprozesses oder die Gliederung in ein Phasenmodell wie es hierzulande durch HOAI und AHO häufig der Fall ist, auffällig selten stattfindet. Der Fokus liegt mehr auf Prinzipien, Rollen, Arbeitsweisen und Entscheidungslogiken als auf einem formalisierten Prozessmodell.\\
-Die Gründe dafür liegen mutmaßlich in den Kernideen von \ac{TVD} selbst und der Art und Weise wie es aufgrund letzterer aktuell in der Praxis integriert wird. Wesentlich sind hierfür die folgenden Punkte:\\
+Eine Betrachtung der einschlägigen Fachliteratur zeigt, dass Target Value Design (TVD) im Gegensatz zur deutschen \ac{HOAI} nur selten als lineares Prozessmodell mit starren Phasen dargestellt wird. Der Fokus der Forschung liegt primär auf den zugrundeliegenden Prinzipien, Rollenbildern und Entscheidungslogiken sowie auf der kulturellen Transformation der Zusammenarbeit.\autocite[vgl.]{zimina_target_2012} \autocite[vgl.]{ballard_target_2025}
 
-- Philosophischer Charakter:TVD ist in erster Linie ein Denk- und Managementprinzip, nicht ein „Planungsphasen-System“.\\
-- Integration statt eigener Prozess:
-In der Praxis wird TVD in bestehende Planungsmodelle eingebettet (USA: IPD + Designphasen; DE: HOAI-Gefüge).
-Dadurch verliert es seine trennscharfe Prozesssicht.\\
-- Iterative, zyklische Natur: TVD basiert auf ständigen Rückkopplungs- und Entscheidungszyklen. Lineare Abbildungen werden dem nicht gerecht.\\
-- Qualität, Tiefe und Sequenz der Anwendung hängen stark vom Projektumfeld ab (Beteiligte, Vertrag, Risikoteilung, Vergabeform etc.).
-Ergo: Kein einheitlicher Ablauf kann überall passen.\\
-- Die US-Forschung liefert eher Richtimpulse als standardisierte Prozessmodelle; europäische bzw. deutsche Normung fehlt nahezu vollständig.\\
+Diese Abwesenheit eines einheitlichen und normierten Phasenmodells lässt sich auf die inhärente Logik des \ac{TVD}-Ansatzes zurückführen. Zum einen versteht sich \ac{TVD} in erster Linie als Managementphilosophie und nicht als formales Leistungsbild. Weiterhin wird \ac{TVD} in der Praxis meist als methodische Ergänzung in bestehende lokale Vertragsmodelle wie das US-amerikanische \ac{IPD} oder britische \acl{PA}-Modelle integriert\autocite[vgl.]{z.B. Fischer et al. 2017, Mossman oder LCI Guide}, wodurch es sich der jeweiligen Prozessstruktur anpasst, anstatt eine eigene Struktur vorzugeben. Zudem widerspricht eine rein lineare Abwicklung der zyklischen sowie iterativen Natur des TVD-Prozesses, der maßgeblich von Rückkopplungsschleifen bestimmt wird.
 
-Wenn kein eindeutiges TVD-Phasenmodell existiert, muss ein idealtypisches konstruieren, um überhaupt messen zu können, wo deutsche Praxis kompatibel ist und wo nicht..
-TVD lebt zwar von Iteration und Flexibilität, aber zur Bewertung der Anschlussfähigkeit an HOAI, AHO, Projektstufen etc. wird eine klar definierte Prozesslogik benötigt.
-Das idealtypisches Phasenmodell erhebt kein Anspruch auf Normierung ist, sondern dient im Rahmen dieser Untersuchung als ein analytisches Hilfsmittel.\\
+Um im Rahmen dieser Arbeit dennoch untersuchen zu können, wie kompatibel TVD mit den stark formalisierten deutschen Abläufen ist, muss ein idealtypisches Phasenmodell konstruiert werden. Dieses Modell dient nicht als neuer Standardvorschlag für die Praxis. Es fungiert vielmehr als analytisches Hilfsmittel, um Unterschiede und Gemeinsamkeiten überhaupt messbar zu machen.
 
-Für die Modellierung des idealtypischen TVD-Prozesses wird in dieser Arbeit ein 4-Phasen-Modell zugrunde gelegt. Diese Struktur stellt eine Synthese aus dem 4-Phasen-Modell des LCI Practitioner Guidebooks (2016) und dem Prozess-Schema nach Ballard (2012)  dar.
-Während das LCI-Modell 'Design' und 'Construction' in einer übergeordneten Phase ('Value Delivery') zusammenfasst , nimmt das hier entwickelte Modell eine explizite Trennung in Phase 2 (Design) und Phase 3 (Umsetzung) vor. Diese Differenzierung erfolgt im Hinblick auf die spätere Transferanalyse (Kapitel 5), um eine präzise Gegenüberstellung mit der in Deutschland strukturell verankerten Trennung von Planungs- und Ausführungsphasen (gemäß HOAI) zu ermöglichen, ohne dabei die iterative Logik des TVD aufzugeben.\\
+Für die weitere Untersuchung wird ein Modell mit vier Phasen zugrunde gelegt. Es verbindet das Prozess-Schema nach Ballard \autocite[vgl.]{ballard_target_2012} mit dem Phasenmodell des \acl{LCI}.\autocite[vgl.]{hill_target_2017} Diese Struktur weist zudem deutliche Parallelen zum deutschen Modell der Integrierten Projektabwicklung (IPA) auf. Ein wesentlicher Unterschied in der Modellierung liegt jedoch in der Gewichtung der Validierung: Während das hier genutzte TVD-Modell der Validierung aufgrund ihrer zentralen Steuerungsfunktion eine eigenständige Phase widmet (Phase 1), verortet das IPA-Modell diesen Prozessschritt meist integrativ zu Beginn der Planungsphase. Die zugrundeliegende Logik, dass keine Realisierung ohne gesicherte Zielkosten erfolgt, ist beiden Ansätzen jedoch gemein.\autocite[vgl. S.8]{haghsheno_ipa-report_2025}
 
-Erster Entwurf/Wahl des Phasenmodells\\
+Während das Modell des Lean Construction Institute die Phasen Design (Planung) und Construction (Ausführung) häufig unter dem Begriff \enquote{Value Delivery} zusammenfasst\autocite[vgl.]{hill_target_2017}, nimmt das hier entwickelte Modell eine bewusste analytische Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) vor. Diese Unterscheidung erfolgt aus methodischen Gründen. Sie ermöglicht im späteren Transferkapitel einen präzisen Vergleich mit der in Deutschland durch \acs{VOB} und \ac{HOAI} verankerten Trennung von Planung und Ausführung (vgl. Abbildung \ref{fig:phasenvergleich}). Gleichzeitig bleibt die für \ac{TVD} essenzielle Phase der Validierung als eigenständiger Abschnitt erhalten.
 
+Das zugrunde gelegte Modell gliedert sich folglich in:
 \begin{itemize}[leftmargin=2em]
-    \item \textbf{Phase 0}: Phase 0: Projektinitiierung und Definition (Project Definition)
-    \item \textbf{Phase 1}: Validierung und Zielsetzung (Validation \& Target Setting)
-    \item \textbf{Phase 2}: Wertorientierte Planung (Value Delivery / Design)
-    \item \textbf{Phase 3}: Realisierung und Abschluss (Implementation \& Learning)
+    \item \textbf{Phase 0}: Projektinitiierung (Project Definition)
+    \item \textbf{Phase 1}: Validierung und Zielsetzung (Validation)
+    \item \textbf{Phase 2}: Wertorientierte Planung (Design to Targets)
+    \item \textbf{Phase 3}: Realisierung und Abschluss (Project Delivery)
 \end{itemize}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{05_figures/HOAI vs. TVD Phasen Vergleich .jpg}
+    
+    \caption[Vergleich HOAI und TVD]{Vergleich der HOAI-Leistungsphasen mit dem idealtypischen TVD-Phasenmodell (Quelle: Eigene Darstellung).}
+    \label{fig:phasenvergleich}
+\end{figure}
 
 \clearpage
 
@@ -97,21 +95,87 @@ In der Validierungsphase des TVD wird dieses Prinzipal-Agent-Problem durch den M
 \clearpage
 
 \section{Phase 2 - Wertorientierte Planung}
-\label{sec:4.3}
+\label{sec:4.4}
+
+Mit dem Abschluss der Validierungsphase (Phase 1) und der vertraglichen Fixierung der Zielkosten (Target Cost) ändert sich die Prozesslogik fundamental. Während Phase 1 die Machbarkeit prüft, fokussiert sich Phase 2 auf die operative Ausarbeitung einer qualitativen Lösung, die zwingend innerhalb des gesetzten Zielkostenrahmens verbleibt ("Design to Targets").
+Der Planungsprozess wandelt sich hierbei von einer linearen Abarbeitung hin zu einem zyklischen, iterativen Steuerungsmodell.
+
+\subsection{Zielsetzung und modelltheoretische Abgrenzung}
+\label{sec:4.4.1}
+Das primäre Ziel der Phase 2 ist die Überführung der funktionalen Anforderungen (aus Phase 0) in ein realisierungsfähiges Design, das Kostensicherheit bietet. Dieser Zustand wird im TVD als "Definitive Design" bezeichnet.
+
+Es ist an dieser Stelle notwendig, eine differenzierte modelltheoretische Abgrenzung vorzunehmen. In der gelebten TVD-Praxis (insb. USA/IPD) verschwimmen Planung und Ausführung durch "Fast-Tracking" und frühe Fertigung komplett. In der deutschen Baupraxis existiert eine solche Integration zwar ebenfalls – beispielsweise in Generalunternehmer-Modellen oder bei funktionalen Ausschreibungen –, jedoch ist der "Standardfall" des deutschen Ordnungsrahmens durch das Trennungsprinzip geprägt.
+
+Sowohl das Vergaberecht (VOB/A: Trennung von Planung und Bau) als auch das Preisrecht (HOAI: Honorierung abgeschlossener Planungsphasen) suggerieren eine sequenzielle Logik, bei der die Ausführung erst nach Abschluss der Planung beginnt. Selbst in partnerschaftlichen Modellen erfolgt die Einbindung der Bauunternehmen oft erst nach Abschluss der Entwurfsplanung (LPH 3), womit das wesentliche Potenzial der frühen Einflussnahme auf das Designkonzept ("Constructability") bereits eingeschränkt ist.
+
+Für die vorliegende Untersuchung wird daher analytisch an der Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) festgehalten. Dies dient dazu, die Reibungspunkte des TVD-Ansatzes mit dem kodifizierten deutschen Standardmodell (Einzelvergabe nach VOB, Planung nach HOAI) präzise herauszuarbeiten. Inhaltlich deckt die Phase 2 dieses Modells somit den gesamten Planungsraum der HOAI-Leistungsphasen 2 (Vorplanung) bis 5 (Ausführungsplanung) ab. Dies markiert die zentrale Verschiebung: Im TVD findet die werkplanerische Detaillierung nicht erst nach der Vergabe statt, sondern wird als integrative Leistung vorgezogen, um die Preissicherheit zu garantieren.
 
 
+\subsection{Strukturierung des Budgets: Target Cost Allocation}
+\label{sec:4.4.2}
+Bevor die inhaltliche Planungsarbeit beginnt, muss das in Phase 1 ermittelte Gesamtbudget ("Project Target Cost") in steuerbare Teilbudgets zerlegt werden. Dieser Prozess der "Target Cost Allocation" transformiert das Budget von einer abstrakten Gesamtsumme in konkrete Handlungsanweisungen für die Planungsteams.
 
+Anders als bei einer klassischen Kostenschätzung nach DIN 276 (Gewerke), erfolgt die Allokation im TVD systemorientiert auf die zu bildenden Cluster (vgl. Kap. 4.4.3). Das Budget wird typischerweise in einem Gegenstromverfahren verteilt:
+\begin{itemize}
+    \item \textbf{Top-Down:} Die Projektsteuerung gibt basierend auf Benchmarks grobe Zielwerte für die Cluster vor (z.B. "Zielwert Fassade: 2,5 Mio. €").
+    \item \textbf{Bottom-Up:} Die Cluster-Teams prüfen diese Werte auf Plausibilität und melden Rückbedarf an.
+\end{itemize}
+Ein essenzieller Bestandteil der Allokation ist das "Contingency Management". Das Budget wird nicht zu 100\% auf die Cluster verteilt. Ein Teil verbleibt als zentraler Puffer ("Project Contingency") beim Bauherrn/Steuerungsteam, um unvorhergesehene Risiken abzudecken, ohne die Target Cost zu erhöhen.
 
+\subsection{Organisatorische Struktur: Interdisziplinäre Cluster-Teams}
+\label{sec:4.4.3}
+Um die Komplexität des Gesamtprojekts handhabbar zu machen, wird die operative Projektorganisation in Phase 2 von einer gewerkespezifischen Trennung auf interdisziplinäre "Cluster-Teams" (Cross-Functional Teams) umgestellt.
 
+\textbf{Zusammensetzung und Rollen}
+Ein Cluster (z.B. "Hülle") vereint alle für dieses Teilsystem relevanten Kompetenzen an einem Tisch. Die typische Besetzung umfasst:
+\begin{enumerate}
+    \item \textbf{Cluster Lead (Planung):} Meist der Architekt oder Fachplaner, der die design-technische Führung übernimmt.
+    \item \textbf{Construction Lead (Ausführung):} Ein Vertreter des ausführenden Unternehmens (z.B. Polier oder Projektleiter des Fassadenbauers).
+    \item \textbf{Estimator (Kalkulation):} Ein Kostenschätzer, der permanenten Zugriff auf aktuelle Marktpreise hat.
+\end{enumerate}
 
+\textbf{Die Rolle der "Makers"}
+Ein entscheidendes Novum des TVD-Prozesses ist die Integration der ausführenden Firmen ("Makers") bereits in dieser frühen Designphase. Ihre Rolle wandelt sich vom reinen Empfänger fertiger Pläne zum aktiven "Co-Creator". Sie bringen fertigungstechnisches Wissen ("Constructability") ein, um Lösungen zu finden, die funktional gleichwertig, aber günstiger zu fertigen sind.
 
+> \textit{Transfer-Hinweis:} Diese frühe Integration steht im Konflikt zur konventionellen Vergabepraxis (VOB/A), die eine strikte Trennung von Planung und Ausführung sowie Produktneutralität fordert. (Diskussion in Kap. 5).
 
+\subsection{Prozesslogik: Der zyklische Steuerungsloop (Continuous Estimating)}
+\label{sec:4.4.4}
+Das methodische Kernstück der Phase 2 ist das "Continuous Estimating". Um den im konventionellen Prozess üblichen "Blindflug" zwischen den Leistungsphasen zu vermeiden, wird der Planungsprozess in kurze, sich wiederholende Zyklen (Sprints) von typischerweise 3 bis 4 Wochen unterteilt.
 
+Ein solcher Zyklus folgt einer festen Logik:
+\begin{enumerate}
+    \item \textbf{Design \& Innovation (Woche 1-2):} Die Cluster-Teams entwickeln Lösungsansätze. Hierbei wird oft parallel an mehreren Varianten gearbeitet (Set-Based Design), um den Lösungsraum nicht zu früh einzuschränken.
+    \item \textbf{Pricing \& Feedback (Woche 3):} Die erarbeiteten Stände werden kalkuliert. Da die Baufirmen Teil des Teams sind, basiert dies auf echten Marktpreisen, nicht auf Datenbank-Mittelwerten. Unterstützt wird dies oft durch BIM-basierte Massenauszüge (Quantity Take-Off).
+    \item \textbf{Steuerungs-Gate (Ende Woche 3):} Im zentralen "Big Room Meeting" werden die Kostenstände aller Cluster zusammengeführt.
+\end{enumerate}
 
+\textbf{Entscheidung am Gate:}
+Das Gate fungiert als harte Qualitätsschranke. Liegt die Prognose eines Clusters über dem zugewiesenen Budget, darf nicht detailliert werden. Das Team muss "zurück ans Reißbrett", um das Design anzupassen (Design to Cost). Nur bei Einhaltung des Budgets erfolgt die Freigabe für den nächsten Detaillierungsgrad.
 
+> \textit{Transfer-Hinweis:} Die HOAI honoriert den Planungserfolg am Phasenende. Iterative Schleifen zur Kostenoptimierung ("Rework") sind im linearen Leistungsbild oft nicht abgebildet und führen zu Honorardiskussionen. (Diskussion in Kap. 5).
 
+\subsection{Entscheidungsfindung und Steuerungsmethodik}
+\label{sec:4.4.5}
+Damit die iterative Arbeitsweise zielgerichtet verläuft, stützt sich Phase 2 auf zwei spezifische Methoden zur Entscheidungsfindung:
 
+\textbf{Set-Based Design (SBD)}
+Anstatt sich intuitiv auf eine einzige Lösung festzulegen ("Point-Based Design") und diese linear auszuarbeiten, halten die Cluster-Teams bewusst mehrere Optionen parallel offen (Sets). Diese werden grob dimensioniert und kalkuliert. Optionen, die sich als technisch oder wirtschaftlich nicht tragfähig erweisen, werden sukzessive eliminiert, bis die optimale Lösung übrig bleibt. Dies vermeidet teure negative Iterationen in späten Phasen.
 
+\textbf{Choosing by Advantages (CBA)}
+Muss zwischen technisch gleichwertigen Varianten entschieden werden, kommt die Methode "Choosing by Advantages" zum Einsatz. Entscheidungen basieren dabei nicht auf einer Gewichtung von Faktoren (die subjektiv sein kann), sondern auf der Analyse der konkreten Vorteile ("Advantages") einer Option im Verhältnis zu ihren Kosten. Dies objektiviert den Entscheidungsprozess und macht ihn gegenüber dem Bauherrn dokumentierbar (z.B. mittels A3-Reports).
+
+\subsection{Abschluss der Phase 2: Das Definitive Design}
+\label{sec:4.4.6}
+Der Abschluss der Phase 2 ist erreicht, wenn das "Definitive Design" vorliegt. Dieser Meilenstein unterscheidet sich qualitativ von einer klassischen Ausführungsplanung.
+
+Das Design ist zu diesem Zeitpunkt nicht nur zeichnerisch dargestellt, sondern bereits "produktionsreif" (Production Ready). Durch die Mitwirkung der "Makers" sind Fertigungsdetails, Montageabläufe und Materialverfügbarkeiten bereits geklärt.
+Das entscheidende Kriterium für den Übergang in Phase 3 ist jedoch die Preissicherheit: Das Team gibt ein verbindliches Commitment ab, dass das Design innerhalb der Target Cost realisierbar ist.
+
+\textbf{Das finale Gate (Release for Construction):}
+Erst wenn die Prognosekosten (Expected Cost) sicher unterhalb der Allowable Cost liegen, wird das Projekt zur physischen Realisierung freigegeben.
+
+> \textit{Transfer-Hinweis:} Die Synchronisation von Planungsfreigabe und absoluter Preissicherheit ist in Einheitspreisverträgen kaum abzubilden, da Endkosten hier oft erst nach Aufmaß feststehen. (Diskussion in Kap. 5).
 
 
 
@@ -122,4 +186,28 @@ In der Validierungsphase des TVD wird dieses Prinzipal-Agent-Problem durch den M
 \clearpage
 
 \section{Phase 3 - Realisierung und Abschluss}
-\label{sec:4.3}
+\label{sec:4.5}
+
+
+Mit dem Erreichen des Definitive Design und der Freigabe zur Ausführung ("Release for Construction") tritt das Projekt in die dritte und letzte Phase des Target Value Design ein. Im Gegensatz zu konventionellen Projekten, in denen während der Bauphase oft noch massive Umplanungen und Kostensteigerungen (Nachträge) auftreten, verlagert sich der Fokus in Phase 3 rein auf die exekutive Umsetzung des Geplanten.
+
+\subsection{Prozessziel: Abweichungsfreie Umsetzung}
+Das primäre Ziel der Phase 3 ist die physische Errichtung des Bauwerks unter strikter Einhaltung der in Phase 2 garantierten Parameter (Kosten, Zeit, Qualität). Da die "Makers" (ausführende Firmen) das Design selbst mitentwickelt haben, entfallen typische Bauablaufstörungen wie Probleme in der praktischen Umsetzung oder fehlende Detailinformationen weitgehend.
+Die Planungsarbeit beschränkt sich in dieser Phase auf die Just-in-Time-Lieferung von logistischen Informationen oder minimalen Anpassungen an unvorhergesehene Baustellenbedingungen.
+
+\subsection{Kostensteuerung: Cost Monitoring statt Cost Estimating}
+Die Art der Kostensteuerung ändert sich fundamental. Während in Phase 2 noch aktiv kalkuliert und optimiert wurde ("Estimating"), geht es nun um das reine "Monitoring":
+\begin{itemize}
+    \item \textbf{Soll-Ist-Vergleich:} Die auflaufenden Kosten werden permanent gegen die Target Cost (bzw. die Allowable Cost) gespiegelt.
+    \item \textbf{Gewinnsicherung:} Da das Budget fixiert ist, arbeiten die Cluster-Teams nun daran, durch Effizienz auf der Baustelle (z.B. durch Lean Construction Methoden wie Taktplanung) ihren Gewinn zu maximieren. Ein Unterschreiten der Kosten ist nun im direkten Interesse der Ausführenden (Pain/Gain-Sharing).
+\end{itemize}
+
+\subsection{Abschluss und Lernen}
+Das TVD-Modell endet nicht mit der Schlüsselübergabe, sondern mit einer formalen Feedback-Schleife. Die tatsächlichen Endkosten werden final mit den Target Costs abgeglichen.
+\begin{itemize}
+    \item \textbf{Incentivierung:} Eventuelle Einsparungen ("Underrun") werden gemäß dem vorab definierten Schlüssel zwischen Bauherr und Risikopool ausgeschüttet.
+    \item \textbf{Wissenssicherung:} Abweichungen (sowohl positive als auch negative) werden analysiert, um die Kennzahlen für zukünftige Projekte ("Benchmarks" für Phase 0) zu schärfen.
+\end{itemize}
+
+> \textit{Transfer-Hinweis:} In der deutschen VOB-Realität ist Phase 3 oft durch Nachtragsmanagement ("Claims") geprägt. Der TVD-Ansatz, dass der Preis fixiert ist und Nachträge durch die vorherige Integration ausgeschlossen sind, erfordert vertraglich eine völlig andere Risikoverteilung als den klassischen Einheitspreisvertrag. (Diskussion in Kap. 5).
+
