--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -6,10 +6,13 @@
 \begin{acronym}[PRISMA]  % Längste Abkürzung für Spaltenbreite
     \acro{AHO}{Ausschuss der Verbände und Kammern der Ingenieure und Architekten für die Honorarordnung}
     \acro{BIM}{Building Information Modeling}
+    \acro{CoS}{Conditions of Satisfaction}
     \acro{IPA}{Integrierte Projektabwicklung}
     \acro{IPD}{Integrated Project Delivery}
     \acro{LC}{Lean Construction}
+    \acro{LCI}{Lean Construction Institute}
     \acro{HOAI}{Honorarordnung für Architekten und Ingenieure}
+    \acro{PA}{Project Alliancing}
     \acro{PRISMA}{Preferred Reporting Items for Systematic Reviews and Meta-Analyses}
     \acro{TVD}{Target Value Design}
     \acro{VOB}{Vergabe- und Vertragsordnung für Bauleistungen}
